[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/CheckerBannerButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Star7-Eaowe.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 3
outline_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_size = 3
outline_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 18
outline_size = 3
outline_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 448.0
margin_top = 197.0
margin_right = 576.0
margin_bottom = 403.0

[node name="PlayButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 38.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PlayButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 2 )
text = "Play"
align = 1
valign = 1

[node name="HelpButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 128.0
margin_bottom = 80.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HelpButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 3 )
text = "Help"
align = 1
valign = 1

[node name="CreditsButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 128.0
margin_bottom = 122.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CreditsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 4 )
text = "Credits"
align = 1
valign = 1

[node name="CustomizeButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 128.0
margin_bottom = 164.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CustomizeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 5 )
text = "Customize"
align = 1
valign = 1

[node name="QuitButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 128.0
margin_bottom = 206.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 1
valign = 1

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/HelpButton" to="." method="_on_HelpButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/HelpButton" to="." method="_on_HelpButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CustomizeButton" to="." method="_on_CustomizeButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/CustomizeButton" to="." method="_on_CustomizeButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CustomizeButton" to="." method="_on_CustomizeButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
